# tira

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/tira/: CMakeLists.txt  integral.cpp  integral.h  main.cpp  tira.cpp  tira.h  tools.cpp  tools.h
